test(command): avoid secret-shaped review fixtures